# THCFireworksPOS

./: .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  LICENSE  README.md  build_app.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  walkthrough.md
.github/workflows/: release.yml
godaddy-bridge/: App.config  BridgeLogger.cs  Inspect.cs  Inspect.csproj  Program.cs  godaddy-bridge.csproj  inspect_output.txt
src/: App.tsx  index.css  main.tsx  setupTests.ts  tauri-plugins.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdminView.tsx  DeveloperWindow.tsx  PlaybackWindow.tsx  RegisterView.tsx  ScannerListener.tsx  SolitaireModal.tsx
src/components/__tests__/: AdminView.test.tsx  DatabaseRecovery.test.tsx  DeveloperWindow.test.tsx  ParkedCarts.test.tsx  PlaybackWindow.test.tsx  RegisterView.test.tsx  ScannerListener.test.tsx  Security.test.tsx  SharedUtils.test.tsx  SplitPayment.test.tsx  UpdateModal.test.tsx
src/components/eastereggs/: ChainReactionGame.tsx  ConnectFourGame.tsx  EasterEggModal.tsx  HexCommandGame.tsx  SolitaireGame.tsx  TrigonGame.tsx  TrithelloGame.tsx
src/components/eastereggs/tests/: ChainReactionGame.test.tsx  ConnectFourGame.test.tsx  EasterEggModal.test.tsx  HexCommandGame.test.tsx  SolitaireGame.test.tsx  TrigonGame.test.tsx  TrithelloGame.test.tsx
src/components/shared/: ParkCartModal.tsx  ParkedCartsModal.tsx  SplitPaymentModal.tsx  colorUtils.ts  confettiUtils.ts  dialogUtils.ts  hexUtils.ts
