[package]
name = "fireworks-pos-app"
version = "1.0.0"
description = "THC Fireworks - Portable Point of Sale"
authors = ["Thousand Hills Church Volunteers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rusqlite compiled statically with SQLite so no system libraries are needed on host
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
