[package]
name = "fireworks-pos-app"
version = "27.1.5"
description = "THC Fireworks - Portable Point of Sale"
authors = ["Thousand Hills Church Volunteers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rusqlite compiled statically with SQLite so no system libraries are needed on host
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
rfd = "0.14"
tiny_http = "0.12"
base64 = "0.22"
ureq = { version = "2.12", features = ["json", "tls"] } # Ensure tls features are on
rustls = { version = "0.23", features = ["ring"] }
jsonwebtoken = "9.3" # For RS256 token generation
tokio = { version = "1", features = ["time"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
